--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li>enter your css notes here</li>
+          <li>using a style element in the head element can allow you to embed an entire stylesheet.</li>
+          <li>use a style element after the head element followed by your h1 and color then close your style element.</li>
+          <li>when using an external style sheet you link the file using a link element placed in the html head.</li>
+          <li></li>
 
         </ul>
       </section>
