added CSS to project

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<<<<<<< HEAD
+<link rel="stylesheet" href="./assets/style.css">
     <title>Prework study Guide</title>
   </head>
   <body>
@@ -35,13 +35,13 @@
     <title>Prework Study Guide</title>
   </head>
   <body>
->>>>>>> 5c4ce0eeef219536b58e3101a92ad02bb30cf72a
+
     <header id="header">
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-<<<<<<< HEAD
+
       <section class="card" id="html-section">
         <h2>HTML</h2>
         <ul>
@@ -56,7 +56,8 @@
           <li>using a style element in the head element can allow you to embed an entire stylesheet.</li>
           <li>use a style element after the head element followed by your h1 and color then close your style element.</li>
           <li>when using an external style sheet you link the file using a link element placed in the html head.</li>
-          <li></li>
+          <li>A margin indicaties how much space we want around the outside of the element</li>
+          <li>A padding indicates how much space we want around the inside of the element.</li>
 
         </ul>
       </section>
@@ -76,9 +77,8 @@
           <li>Enter your Javascript notes here</li>
         </ul>
       </section>
-=======
-      <!-- Student code goes here -->
->>>>>>> 5c4ce0eeef219536b58e3101a92ad02bb30cf72a
+
+      
     </main>
 
     <footer>
