--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <header id="header">
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <h2>✨ Open the Console to See What's Happening ✨</h2>
     </header>
     <main>
 
@@ -48,7 +49,8 @@
       <section class="card" id="javascript-section">
         <h2>JAVASCRIPT</h2>
         <ul>
-          <li>Enter your Javascript notes here</li>
+          <li>the script . js element is linked in the body element</li>
+          <li></li>
         </ul>
       </section>
 
@@ -58,5 +60,6 @@
     <footer>
       <p>I can code!</p>
     </footer>
+    <script src="./assets/script.js"></script>
   </body>
 </html>
