added more javascript

--- a/index.html
+++ b/index.html
@@ -50,7 +50,10 @@
         <h2>JAVASCRIPT</h2>
         <ul>
           <li>the script . js element is linked in the body element</li>
-          <li></li>
+          <li>make sure console logs is in the same squiggly bracket as the function</li>
+          <li>when adding functions use the {}</li>
+          <li>else if statements are useful for when you want to have a logic pathway</li>
+          <li>use a for loop to give definitions to a loop</li>
         </ul>
       </section>
 
